# acc

./: .gitignore  Cargo.toml  README.md  flake.nix
.github/workflows/: pages.yml
demo/: available_expressions.c  available_expressions.out  busy_expressions.c  busy_expressions.out  dead_values.out  reaching_definitions.c  reaching_definitions.out
docs/: parser_spec.md
playground/: COMPILER.md  README.md  build-wasm.ts  build.ts  package.json
playground/src/: App.tsx  (+4 more)
src/: diagnostics.rs  lib.rs  main.rs  test_harness.rs  test_harness_core.rs  test_harness_demo.rs  test_harness_llvm.rs  wasm.rs
tests/: bad_dataflow.c  bad_dataflow.out  bad_dataflow_2.c  bad_dataflow_2.out  bad_dataflow_3.c  bad_dataflow_3.out  bad_ref_self_in_initializer.c  bad_ref_self_in_initializer.out  breaking_control_flow_for.c  breaking_control_flow_for.out  breaking_control_flow_if.c  breaking_control_flow_if.out  breaking_control_flow_while.c  breaking_control_flow_while.out  busy_exprs.c  busy_exprs.out  composite_assignments.c  composite_assignments.out  dead_code.c  dead_code.out  expected_identifier.c  expected_identifier.out  expr_reuse.c  expr_reuse.out  for_shadows_outer_variables.c  for_shadows_outer_variables.out  good_dataflow.c  good_dataflow.out  invalid_operator.c  invalid_operator.out  missing_semicolon.c  missing_semicolon.out  redeclaration.c  redeclaration.out  ref_self_in_initializer_uses_parent_scope.c  ref_self_in_initializer_uses_parent_scope.out  resolve_shadowing.c  resolve_shadowing.out  resolve_shadowing_bad_dataflow.c  resolve_shadowing_bad_dataflow.out  (+16 more)
(+35 files in other folders)
